--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 10 00:36:05 MSK 2019
-sdk.dir=D\:\\Programming\\Android_SDK
+#Wed Sep 11 11:15:27 MSK 2019
+sdk.dir=/home/misha/Android/Sdk
