--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:29.0.0'
     implementation 'com.android.support:design:29.0.0'
 
+    //Firebase
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+//FireBase
+apply plugin: 'com.google.gms.google-services'
