--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 11 11:15:27 MSK 2019
-sdk.dir=/home/misha/Android/Sdk
+#Thu Sep 12 15:54:32 MSK 2019
+sdk.dir=D\:\\Programming\\Android_SDK
