--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,6 @@ dependencies {
     // alternatively - just ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
 
-
     implementation 'com.vk:androidsdk:2.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -72,6 +71,12 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
+
+    //Worker
+    def work_version = "2.2.0"
+
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
