--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 12 15:54:32 MSK 2019
-sdk.dir=D\:\\Programming\\Android_SDK
+#Tue Sep 17 22:37:11 MSK 2019
+sdk.dir=/home/misha/Android/Sdk
