--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <!--<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
     <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
