--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 17 22:37:11 MSK 2019
-sdk.dir=/home/misha/Android/Sdk
+#Wed Sep 18 20:47:51 MSK 2019
+sdk.dir=D\:\\Programming\\Android_SDK
